--- a/res/layout/activity_camera.xml
+++ b/res/layout/activity_camera.xml
@@ -1,14 +1,24 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".CameraActivity" >
+    android:layout_height="match_parent" 
+    android:background="#000000">
 
-    <TextView
+    <ImageButton
+        android:id="@+id/button_take_preview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world" />
+        android:contentDescription="Take Pic"
+        android:padding="15dp"
+        android:src="@drawable/ic_action_camera" />
+
+    <LinearLayout
+        android:id="@+id/camera_frame"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        android:layout_above="@+id/button_take_preview" />
 
 </RelativeLayout>
